gcc/testsuite/rust/rustc/ui/parser/diff-markers/unclosed-delims-in-macro.rs
macro_rules! foo {
<<<<<<< HEAD
// { dg-error "" "" { target *-*-* } .-1 }
    () {
=======
    () { //
>>>>>>> 7a4f13c blah blah blah
    }
}

